Profile links visibility fixed

--- a/application/static/stylus/news.styl
+++ b/application/static/stylus/news.styl
@@ -1,17 +1,19 @@
-.edit-buttons
-  position: absolute
-  top: 0
-  right: 0
-  font-size: 1.5em
-  padding: 10px
-  display: none
-  a
-    &:first-child span
-      padding-top: 4px
-    vertical-align: top
-    display: inline-block
-    height: 20px
-    padding: 5px
+
+.news-list, .news-one, .community
+  .edit-buttons
+    position: absolute
+    top: 0
+    right: 0
+    font-size: 1.5em
+    padding: 10px
+    display: none
+    a
+      &:first-child span
+        padding-top: 4px
+      vertical-align: top
+      display: inline-block
+      height: 20px
+      padding: 5px
 .news-list article .text
   max-height: 800px
   overflow: hidden
